--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
                 android:layout_height="50dp"
                 android:layout_marginEnd="28dp"
                 android:onClick="showTimePickerDialog"
-                android:text="@string/button_set_time"
+                android:text="@string/btnSetTime"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
