--- a/app/src/main/res/xml/ccfslauncher_widget_info.xml
+++ b/app/src/main/res/xml/ccfslauncher_widget_info.xml
@@ -2,8 +2,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/ccfslauncher_widget"
     android:initialLayout="@layout/ccfslauncher_widget"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="72dp"
+    android:minHeight="72dp"
     android:previewImage="@mipmap/ic_game_utilities"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen" />
