--- a/app/src/main/res/drawable/round_shape.xml
+++ b/app/src/main/res/drawable/round_shape.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <layer-list>
-            <item android:top="3dp" android:left="2dp" android:height="64dp"
-                android:width="64dp">
+            <item android:left="1dp" android:top="1dp" android:height="65dp"
+                android:width="65dp">
                 <shape android:shape="rectangle">
                     <corners android:radius="32dp" />
                     <gradient android:startColor="#BBBBBB"
@@ -11,11 +11,11 @@
                         android:angle="315"/>
                 </shape>
             </item>
-            <item android:right="1dp" android:bottom="1dp" android:height="64dp"
+            <item android:left="1dp" android:top="1dp" android:height="64dp"
                 android:width="64dp">
                 <shape android:shape="rectangle">
                     <solid android:color="@color/ic_game_utilities_background" />
-                    <size android:height="48dp" android:width="64dp" />
+                    <size android:height="64dp" android:width="64dp" />
                     <corners android:radius="32dp" />
                 </shape>
             </item>
